<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list"
        android:splitMotionEvents="false"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_text"
        app:spanCount="2"
        tools:listitem="@layout/item_character" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/black"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_text" />

    <LinearLayout
        android:id="@+id/retry_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="2dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_text"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/error"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/retry_btn"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:foreground="@drawable/retry_button_selector"
            android:text="@string/retry"
            android:textColor="@color/white" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/filter_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:clickable="true"
        android:background="@drawable/filter_background"
        android:visibility="invisible"
        android:orientation="vertical"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@id/search_text"
        android:focusable="true">

        <TextView
            android:id="@+id/header_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/gender"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gender_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/select"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/header_status"
            app:layout_constraintEnd_toStartOf="@id/clear_gender_filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_gender" />

        <ImageView
            android:id="@+id/clear_gender_filter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_close"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/header_status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gender_menu"
            app:layout_constraintTop_toBottomOf="@id/header_gender" />

        <TextView
            android:id="@+id/header_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/status"
            app:layout_constraintTop_toBottomOf="@id/gender_menu" />

        <TextView
            android:id="@+id/status_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/select"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clear_status_filter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_status" />

        <ImageView
            android:id="@+id/clear_status_filter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/ic_close"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/status_menu"
            app:layout_constraintTop_toBottomOf="@id/header_status" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/search_text"
        android:layout_width="0dp"
        android:layout_height="?actionBarSize"
        android:layout_margin="3dp"
        android:imeOptions="flagNoExtractUi|actionSearch"
        android:background="@drawable/background_search"
        android:elevation="12dp"
        android:hint="@string/search_hint"
        android:inputType="textImeMultiLine"
        android:maxLines="1"
        android:padding="10dp"
        android:translationZ="7dp"
        app:layout_constraintEnd_toStartOf="@id/filter_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/filter_button"
        android:layout_width="50dp"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:background="@drawable/background_search"
        android:elevation="12dp"
        android:src="@drawable/ic_filter"
        android:translationZ="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_text"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>